Preparando backend para deploy na nuvem